homepage implemented (desktop version).

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,11 @@ body {
   background: var(--background);
 }
 
-h1 {
-  font-size: 1.5rem;
+h1,
+h2 {
+  margin: 0;
+}
+
+button:hover {
+  cursor: pointer;
 }
