--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,7 +9,7 @@
 }
 
 .mainSection {
-  height: 100%;
+  min-height: 100%;
 
   background: var(--primary);
 
@@ -48,4 +48,14 @@
 
 .createPollSection {
   padding: 1rem 0rem;
+}
+
+@media (max-width: 413px) {
+  .button {
+    width: 100%;
+  }
+
+  .title {
+    text-align: center;
+  }
 }
