--- a/src/styles/CreatePoll.module.css
+++ b/src/styles/CreatePoll.module.css
@@ -31,8 +31,6 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
-
-  width: 209px;
 }
 
 .formGroup {
@@ -49,7 +47,30 @@
   background: var(--primary);
   border: none;
   border-radius: 0.3125rem;
-  padding: 0.25rem 1rem;
+  padding: 0.5rem 1rem;
+
+  color: var(--white);
+}
+
+.pollOptions {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.buttonsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+  width: 200px;
+}
+
+.button {
+  background: var(--red);
+  border: none;
+  border-radius: 0.625rem;
+  padding: 0.625rem 1rem;
 
   color: var(--white);
 }
