--- a/src/styles/CreatePoll.module.css
+++ b/src/styles/CreatePoll.module.css
@@ -31,6 +31,8 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+
+  width: 100%;
 }
 
 .formGroup {
@@ -63,7 +65,7 @@
   flex-direction: column;
   gap: 0.5rem;
 
-  width: 200px;
+  width: 100%;
 }
 
 .button {
@@ -73,4 +75,8 @@
   padding: 0.625rem 1rem;
 
   color: var(--white);
+}
+
+.button:disabled {
+  background-color: var(--disabled-red);
 }
