--- a/src/styles/Poll.module.css
+++ b/src/styles/Poll.module.css
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-.section {
+.pollOptionsSection {
   background: var(--primary);
   padding: 1.5rem;
   border-radius: 1.5rem;
@@ -37,7 +37,7 @@
 }
 
 .li {
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: var(--white);
 
   display: flex;
@@ -51,15 +51,33 @@
 }
 
 .pollOptionButton {
-  font-size: 1.25rem;
+  font-size: 1rem;
+  font-weight: 600;
   color: var(--white);
 
   background: var(--red);
   border: none;
   border-radius: 0.5rem;
-  padding: 0.25rem 0rem;
+  padding: 0.5rem 0rem;
 
   width: 100px;
+}
+
+.homeButton {
+  width: 100%;
+
+  font-size: 1rem;
+  color: var(--white);
+  font-weight: 600;
+
+  padding: 0.625rem 0rem;
+  border-radius: 0.625rem;
+  border: none;
+  background: var(--red);
+}
+
+.main a {
+  width: 100%;
 }
 
 @media (max-width: 432px) {
