--- a/src/styles/Poll.module.css
+++ b/src/styles/Poll.module.css
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .title {
@@ -36,32 +37,29 @@
   width: 100%;
 }
 
-.li {
+/* .li {
   font-size: 1rem;
   color: var(--white);
 
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-}
+} */
 
-.pollOptionText {
+/* .pollOptionText {
   text-wrap: wrap;
   max-width: 350px;
 }
 
 .pollOptionButton {
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--white);
+  width: 1.875rem;
+  height: 1.875rem;
 
-  background: var(--red);
+  border-radius: 0.375rem;
   border: none;
-  border-radius: 0.5rem;
-  padding: 0.5rem 0rem;
 
-  width: 100px;
-}
+  background: var(--secondary);
+} */
 
 .homeButton {
   width: 100%;
