adds voting feature to poll.

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -30,6 +30,11 @@
   padding: 1.125rem 0rem;
 }
 
+.pollCardsContainer a {
+  text-decoration: none;
+  color: var(--white);
+}
+
 .button {
   background: var(--red);
   border: none;
