--- a/src/components/PollListItem/PollListItem.module.css
+++ b/src/components/PollListItem/PollListItem.module.css
@@ -16,10 +16,18 @@
   width: 1.875rem;
   height: 1.875rem;
 
-  border-radius: 0.375rem;
+  border-radius: 50%;
   border: none;
 
   background: var(--secondary);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pollOptionButton:disabled {
+  background: transparent;
 }
 
 .chosenPollItem {
